syntax = "proto3";

package config;

option go_package = "github.com/wgsaxton/go-grpc-class/module6/proto";

service ConfigService {
    rpc LongRunning(LongRunningRequest) returns (LongRunningResponse);
    rpc Flaky(FlakyRequest) returns (FlakyResponse);
}

message LongRunningRequest {}

message LongRunningResponse {}

message FlakyRequest {}

message FlakyResponse {}